# toon-llm

./: .editorconfig  .gitignore  AGENTS.md  CHECKLIST.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  SPECIFICATION.md  docker-compose.dev.yml  pyproject.toml  tox.ini
.devcontainer/: Dockerfile.dev  devcontainer.json
.devcontainer/rc/: .bashrc
.github/workflows/: test.yml
.trunk/: trunk.yaml
docs/: BUILD.md  CODING_STANDARDS.md  IMPLEMENTATION.md  LLM_PROMPTS.md  README.md  SPECIFICATION.md
pytoon/: __init__.py  constants.py  decoders.py  encoders.py  errors.py  main.py  normalize.py  primitives.py  types.py  utils.py  writer.py
samples/invalid-complex/: invalid-complex-broken-nesting.toon  invalid-complex-deeply-nested-length-error.toon  invalid-complex-delimiter-inconsistency.toon  invalid-complex-extra-blank-lines.toon  invalid-complex-list-indent-mismatch.toon  invalid-complex-list-missing-hyphen-continuation.toon  invalid-complex-mixed-indent-levels.toon  invalid-complex-mixed-list-structure-error.toon  invalid-complex-nested-array-length-mismatch.toon  invalid-complex-nested-array-wrong-length.toon  invalid-complex-root-array-length-mismatch.toon  invalid-complex-tabular-inconsistent-header-quoting.toon  invalid-complex-tabular-quoted-row-as-single.toon  invalid-complex-tabular-unquoted-special-value.toon  invalid-complex-tabular-wrong-row-indent.toon
samples/invalid-simple/: invalid-simple-array-spaces-after-delimiter.toon  invalid-simple-array-trailing-comma.toon  invalid-simple-list-wrong-continuation-indent.toon  invalid-simple-missing-colon.toon  invalid-simple-missing-key.toon  invalid-simple-mixed-delimiters.toon  invalid-simple-tabular-header-no-comma.toon  invalid-simple-tabular-wrong-column-count.toon  invalid-simple-unescaped-newline.toon  invalid-simple-unquoted-special-key.toon
samples/valid-complex/: valid-complex-array-of-arrays.toon  valid-complex-combined-options.toon  valid-complex-length-marker.toon  valid-complex-list-format-different-keys.toon  valid-complex-list-format-nested.toon  valid-complex-list-multiple-arrays.toon  valid-complex-mixed-primitives-objects.toon  valid-complex-pipe-delimiter-aware-quoting.toon  valid-complex-tab-delimiter-aware-quoting.toon  valid-complex-tabular-quoted-headers.toon
samples/valid-simple/: valid-simple-object-with-null.toon  valid-simple-string-structural.toon
specification/: README.md
specification/samples/: INDEX.md  README.md
specification/samples/invalid-complex/: invalid-complex-length-marker-inconsistency.toon  invalid-complex-nested-tabular-wrong-indent.toon  invalid-complex-nested-trailing-space.toon  invalid-complex-tabular-inconsistent-columns.toon  invalid-complex-tabular-length-mismatch.toon
specification/samples/invalid-simple/: invalid-simple-array-leading-comma.toon  invalid-simple-array-missing-colon.toon  invalid-simple-array-wrong-length.toon  invalid-simple-length-marker-mismatch.toon  invalid-simple-list-hyphen-no-space.toon  invalid-simple-list-missing-colon.toon  invalid-simple-list-missing-hyphen.toon  invalid-simple-odd-indent-spaces.toon  invalid-simple-tabular-missing-colon.toon  invalid-simple-tabular-missing-indent.toon  invalid-simple-tabular-wrong-row-count.toon  invalid-simple-trailing-space.toon  invalid-simple-unquoted-comma-value.toon  invalid-simple-wrong-indent.toon
specification/samples/valid-complex/: valid-complex-deep-nesting.toon  valid-complex-nested-object-with-arrays.toon  valid-complex-nested-tabular.toon  valid-complex-pipe-delimiter.toon  valid-complex-real-world-company.toon  valid-complex-real-world-products.toon  valid-complex-root-list.toon  valid-complex-root-nested-arrays.toon  valid-complex-root-primitive-array.toon  valid-complex-root-tabular.toon  valid-complex-tab-delimiter-no-comma-quoting.toon  valid-complex-tab-delimiter.toon  valid-complex-tabular-quoted-values.toon  valid-complex-tabular-with-floats.toon  valid-complex-tabular-with-null.toon
src/toon/: __init__.py  decoders.py  encoders.py  errors.py  main.py  normalize.py  primitives.py  types.py  utils.py  writer.py
tests/: __init__.py  sample_data.py  test_cli.py  test_decode_options.py  test_decode_utils.py  test_edge_cases.py  test_encode_invalid.py  test_encode_valid_complex.py  test_encode_valid_simple.py  test_roundtrip.py  test_valid_simple.py
(+8 files in other folders)
