[project]
name = "py-toon"
version = "v0.3.1"
description = "Token-Oriented Object Notation – JSON for LLMs"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "better-exceptions>=0.3.3",
    "coverage>=7.11.0",
    "pydantic>=2.12.3",
    "pyright>=1.1.407",
    "pytest>=8.4.2",
    "ruff>=0.14.2",
    "tox>=4.32.0",
]

[project.urls]
Homepage = "https://github.com/davidpirogov/py-toon"

[tool.black]
line-length = 110

[tool.hatch.build.targets.wheel]
packages = ["pytoon"]

[tool.hatch.build.targets.sdist]
packages = ["pytoon"]
